# agenttilecli

./: Cargo.toml  LICENSE  README.md  build.rs  install.sh
src/: app.rs  clipboard.rs  config.rs  groups.rs  hooks.rs  ipc.rs  keybindings.rs  layout.rs  links.rs  main.rs  model.rs  palette.rs  pane.rs  search.rs  session.rs  shortcuts.rs  style.css  testing.rs  tiler.rs  update.rs  updates.rs
src/app/: header.rs  mod.rs  projects.rs  sidebar.rs
src/tiler/: manager.rs  mod.rs  panes.rs  resize.rs
