[package]
name = "agenttilecli"
version = "0.4.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
# Pinned to the 1.5 API rather than the newest available. Everything this app
# uses landed at or before 1.5 (OverlaySplitView 1.4, ToastOverlay and Banner
# 1.0, PreferencesDialog / AlertDialog / AboutDialog 1.5), and asking for a
# later one would raise the libadwaita floor on every distro in the README's
# install table for widgets there are perfectly good 1.5 answers to - a linked
# ToggleButton row instead of AdwToggleGroup (1.7), GtkShortcutsWindow instead
# of AdwShortcutsDialog (1.8).
adw = { package = "libadwaita", version = "0.9", features = ["v1_5"] }
vte4 = { version = "0.10" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
